# x-algorithm-enhancements

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
benchmarks/: f2_final_benchmark.py  kv_cache_hw_analysis.py  kv_cache_limits.py  kv_cache_scaling.py  kv_cache_stress.py  quantization_study.py  run_test4_and_hw.py
docs/: analysis_tools.md  architecture.md  codebase_reorg_plan.md  design_doc.md  f2_optimization_results.md  implementation_plan.md  process.md  results.md
enhancements/: __init__.py
outputs/: stakeholder_comparison_results.json
phoenix/: grok.py
results/: amazon-kindle_data_budget_all_hidden.json  amazon-kindle_deep_analysis.json  amazon-kindle_expanded_direction_validation.json  amazon-kindle_extremal_evidence.json  amazon-kindle_goodhart.json  amazon-kindle_labels_not_loss.json  amazon-kindle_loso.json  amazon-kindle_scalarization_baseline.json  audit_toolkit.json  expanded_direction_validation.json  functional_form_fit.json  goodhart_condition_validation.json  held_out_verification.json  llm_margin_proxy.json  mind-small_convergence_ablation.json  mind-small_data_budget_all_hidden.json  mind-small_deep_analysis.json  mind-small_expanded_direction_validation.json  mind-small_extremal_evidence.json  mind-small_goodhart.json  mind-small_labels_not_loss.json  mind-small_loso.json  mind-small_scalarization_baseline.json  ml-100k_deep_analysis.json  ml-100k_extremal_evidence.json  ml-100k_loso.json  ml-100k_scalarization_baseline.json  ml-1m_data_budget_all_hidden.json  ml-1m_deep_analysis.json  ml-1m_expanded_direction_validation.json  ml-1m_foundation.json  ml-1m_goodhart.json  ml-1m_labels_not_loss.json  ml-1m_loso.json  ml-1m_scalarization_baseline.json  movielens_foundation.json  movielens_goodhart.json  movielens_labels_not_loss.json  movielens_loso.json  scalarization_baseline.json  (+2 more)
scripts/: _dataset_registry.py  ablation_study.py  analyze_alpha_recovery.py  analyze_archetype_pareto.py  analyze_learned_model.py  analyze_nonlinear_robustness.py  analyze_partial_observation.py  analyze_stakeholder_utilities.py  analyze_utility_sensitivity.py  compare_pareto_frontiers.py  compare_pluralistic_approaches.py  compute_exp4_frontiers.py  download_movielens.py  evaluate_reward_model.py  (+18 more)
(+328 files in other folders)
